tests/ui/async-await/return-type-notation/ty-or-ct-params.stderr
error: return type notation is not allowed for functions that have type parameters
  --> $DIR/ty-or-ct-params.rs:13:12
   |
LL |     async fn bar<T>() {}
   |                  - type parameter declared here
...
LL |     T: Foo<bar(..): Send, baz(..): Send>,
   |            ^^^^^^^^^^^^^

error: return type notation is not allowed for functions that have const parameters
  --> $DIR/ty-or-ct-params.rs:13:27
   |
LL |     async fn baz<const N: usize>() {}
   |                  -------------- const parameter declared here
...
LL |     T: Foo<bar(..): Send, baz(..): Send>,
   |                           ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

